# my-openenv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
baseline/: __init__.py  baseline_results.json  run_baseline.py
environment/: __init__.py  env.py  generator.py  models.py
environment/graders/: __init__.py  email_grader.py  reconciliation_grader.py  score_utils.py  ticket_grader.py
server/: __init__.py
tasks/: __init__.py  task1_email.py  task2_tickets.py  task3_reconciliation.py
tests/: __init__.py  test_baseline.py  test_env.py  test_graders.py
